[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.118.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.37.0",
]
